Move honest cookies to bottom instead of top to prevent overlay on smaller screens

--- a/honest-cookies.css
+++ b/honest-cookies.css
@@ -1,7 +1,7 @@
 #honest-cookies {
 	position:absolute;
 	left:0;
-	top:17%;
+	bottom:24%;
 	width:100%;
 	text-align:center;
 	z-index:200;
